updates liverpool swep

--- a/src/pages/liverpool/severe-weather-accommodation/index.hbs
+++ b/src/pages/liverpool/severe-weather-accommodation/index.hbs
@@ -26,37 +26,39 @@ location: liverpool
 <div class="block">
   <div class="container">
     <div class="block__content">
-      <p>Liverpool City Council commission The Whitechapel Centre to provide a co-ordinated response via a <em>“Somewhere safe to stay Hub”</em>, Labre House. This provision is delivered 365 nights a year and offers shelter and support every night, including when temperatures drop or severe weather events are predicted.</p>
-
-      <h2 class="h2">Where is the centre?</h2>
-
-      <p>Labre House is situated in Camden Street in Liverpool City Centre. The service is open from 8pm -8am every night of the year including any periods when SWEP is predicted. Access into the service can be via self-referral at Whitechapel Centre day hub service, situated at Lansdale Street, Liverpool or via Always Room Inside helpline <a href="tel:03001232041">0300 123 2041</a> 24 hours a day delivered by Whitechapel’s Rough Sleeper team.  The helpline is for either individuals facing imminent risk of rough sleeping in Liverpool,  or for members of the public who are concerned about a rough sleeper, street outreach teams and or faith groups and any other agency in the city supporting any individual who is rough sleeping.</p>
-
-      <h2 class="h2">When is the Provision Open & What is Offered?</h2>
-
-      <p>Labre house is open to Rough Sleepers from 8pm -8am and the following support is offered;</p>
-      <ul>
-        <li>Safe shelter, warmth and support</li>
-        <li>Support to access accommodation, advice and signposting to Health, Substance Misuse services, Benefits agencies and other support agencies.</li>
-        <li>Bedding and storage of belongings</li>
-        <li>Dogs and pets are welcome</li>
-        <li>Couples welcome</li>
-        <li>Onsite food and hot drinks during stay</li>
-        <li>Friendly skilled staff to support any individual</li>
-        <li>Anyone with No Recourse To Public Funds will also be assessed.</li>
-      </ul>
-
-      <h2 class="h2">Who can access?</h2>
-
-      <p>The provision is for rough sleepers or anyone who finds themselves rough sleeping that night in Liverpool. The service aims to be as inclusive as possible and will manage risk on a case by cases basis to ensure the most entrenched and excluded individuals are able to gain shelter and support.</p>
-
-      <h2 class="h2">How will agencies and people sleeping rough know when the centre is open?</h2>
-
-      <p>The Whitechapel Centre and Liverpool City Council promote the service all year round as well as Whitechapel Centre’s Rough Sleeper Team who ensure that all rough sleepers are aware of service via street outreach. The Rough Sleeper team also promote service to all local providers and agencies.</p>
-      <p>Adverts are also made via <a href="https://whitechapelcentre.co.uk">Whitechapel’s Website</a>, <a href="https://liverpool.gov.uk">Liverpool City Council</a> and other social media platforms such as Facebook and Twitter.  The Always Room Inside helpline is also publicised through a public marketing plan e.g. bus stops, taxis etc.</p>
+      <h1 class="h1">Plans for addressing Rough Sleeping during winter 2022</h1>
+      <p>The purpose of this update is to share the series of proactive measures taken by the City and our partners to address the needs of people who may rough sleep over the winter period.  </p>
+      <p>This paper will provide an update on our Severe Emergency Weather Proposals (SWEP) for the forthcoming the winter months (defined by government as being from 1st December to 31st March).</p><br>
+      <h1 class="h1">Background</h1>
+      <ol>
+        <li>In addition to the commissioned Temporary Accommodation services already in place, with more than 600 beds for single people, a range of further resources have been secured to provide a ‘First Step from the Street’ solution over two sites.</li>
+        <li>However, rough sleeping during episodes of severe weather is a real concern and all Local Authorities have a humanitarian duty to provide a cold weather response to ensure rough sleepers are warm and safe during these periods.</li><br>
+        <h2 class="h2">The Winter Plan and SWEP response</h2>
+        <li>We have worked with local partners to ensure that there are sufficient solutions in place during the worst of the winter that are in line with some of our pre-pandemic responses to this group and our duties under SWEP. </li>
+        <li>Liverpool defines severe weather a prediction of <span class="bold">2 degrees or lower</span> on any given night. Or other severe weather, such as storms, high winds etc.</li>
+        <li>As part of our winter plan, we have secured a range of solutions across a number of facilities, up to 31st March. </li>
+        <li>We will monitor demand carefully and seek to provide additional capacity as needed.</li>
+        <li>Support, including food and prescribed medication, will be provided to people in hotel settings from our commissioned support services delivered through The Whitechapel Centre and / or The Salvation Army / SAHA. </li>
+        <li>Our commissioned temporary accommodation providers have offered capacity through a ‘sit-up’ approach – this is a shared communal space that can be offered during SWEP. This will see a small number of individuals in each setting, in addition to our other offers.  </li>
+      </ol>
     </div>
-
-    {{> social-share}}
-
   </div>
 </div>
+
+<div class="block block--highlight">
+  <div class="container">
+    <div class="block__content">
+      <h2 class="h1 best-practice__header">If someone is at risk of Rough sleeping</h2>
+
+      <ol>
+        <li>Contact should be made to the Rough Sleeper helpline Always Help Available on 0300 123 2041, which operates 24 hours a day, 365 days per year.  The Outreach Team can then respond and support rough sleepers indoors. Alternatively, there is on-line reporting tool: <a target="_blank" href="http://www.whitechapelcentre.co.uk/tell-us-about-a-rough-sleeper.html ">http://www.whitechapelcentre.co.uk/tell-us-about-a-rough-sleeper.html</a></li>
+        <li>The Rough Sleepers Team operates 24 hours a day, 7 days a week. They respond to helpline calls and visit places where they know people sleep rough, to offer help and support and access to services and facilities,</li>
+        <li>Outreach teams and other services will facilitate the placement of people rough sleeping or at immediate risk of rough sleeping already known to them. </li>
+        <li>Anyone accommodated during SWEP will be offered an assessment of their needs and linked into other agencies as necessary, including the Councils own Housing Options Service, who will determine any Priority need under Homelessness Legislation and work to develop a Personal Housing Plan. </li>
+        <li>Move on through commissioned services and/or into independent accommodation in the community, or other solutions will be explored as part of an assessment / Personal Housing Plan.</li>
+      </ol>
+
+    </div>
+  </div>
+</div>
+{{> social-share}}
