adds helen to team page

--- a/src/pages/about/our-team/index.hbs
+++ b/src/pages/about/our-team/index.hbs
@@ -103,13 +103,13 @@ page: team
           <a href="mailto:brightonandhove@streetsupport.net">Contact Tim</a>
         </div>
 
-        {{!-- <div class="team-card">
+        <div class="team-card">
           <img class="team-card__img" src="/assets/img/mugshots/helen.jpg" alt="">
           <h1 class="team-card__heading">Helen Wilkenson</h1>
           <h2 class="team-card__subheading">Chelmsford</h2>
           <p class="team-card__content">Helen first started volunteering with Cool to be Kind, helping with their marketing and raising awareness regarding the setting up and the launch of Street Support Chelmsford. She provides support for the organisations listed on Street Support Chelmsford site and is a key contact for the Chelmsford Street Support network.</p>
           <a href="mailto:chelmsford@streetsupport.net">Contact Helen</a>
-        </div> --}}
+        </div>
 
         <div class="team-card">
           <img class="team-card__img" src="/assets/img/mugshots/crispin.jpg" alt="">
