--- a/src/scss/partials/_card.scss
+++ b/src/scss/partials/_card.scss
@@ -377,6 +377,7 @@ $spacing: 20px;
   box-shadow: 2px 2px 2px 2px #c4c4c4;
   margin: 10px 20px 10px 0;
   padding: 0 10px 10px 10px;
+  border-radius: 5px;
 
   @include mq($from: s) {
     width: 220px;
@@ -391,6 +392,7 @@ $spacing: 20px;
 .team-card__heading {
   font-size: 20px;
   margin-bottom: 0;
+  margin-top: 10px;
 }
 
 .team-card__subheading {
@@ -404,9 +406,10 @@ $spacing: 20px;
 
 .team-card__img {
   display: block;
-  margin-top: 10px;
+  margin-top: 15px;
   margin-left: auto;
   margin-right: auto;
   width: 75%;
   border: 1px solid #c4c4c4;
+  border-radius: 5px;
 }
