--- a/src/scss/partials/_images.scss
+++ b/src/scss/partials/_images.scss
@@ -46,3 +46,15 @@
     }
   }
 }
+
+.fairy-lights {
+  @include mq($from: m) {
+    &:after {
+      content: '';
+      width: 100%;
+      height: 120px;
+      background: url('../img/fairy-lights.png') repeat-x;
+      display: block;
+    }
+  }
+}
