adds new link to legislative theatre

--- a/src/pages/greater-manchester/legislative-theatre/index.hbs
+++ b/src/pages/greater-manchester/legislative-theatre/index.hbs
@@ -28,19 +28,13 @@ location: greater-manchester
   </div>
 </div>
 
-{{!-- <div class="block block--location-header location-header">
-  <div class="container container--location-header" style="height: 250px;">
-    <h1 class="h1 block__header">Legislative Theatre</h1>
-    <p class="h2 block__sub-header">A tagline about legislative theatre</p>
-  </div>
-</div> --}}
-
 <div class="block">
   <div class="container">
     <div class="block__content">
 
       <h2>Legislative Theatre News</h2>
       <ul>
+        <li><a href="https://themeteor.org/2022/03/12/legislative-theatre/">Legislative theatre: enhancing and diversifying democracy, with a smile</a> (The Meteor)</li>
         <li><a href="https://news.streetsupport.net/2020/06/11/introducing-gm-legislative-theatre/">Introducing GM Legislative Theatre</a></li>
         <li><a href="https://news.streetsupport.net/2020/12/02/gmhan-legislative-theatre-funding-and-commissioning/">GMHAN Legislative Theatre - Funding and Commissioning</a></li>
         <li><a href="https://news.streetsupport.net/2020/12/16/policy-proposals-from-the-legislative-theatre-funding-commissioning-event-on-9th-dec/">Policy proposals from the Legislative Theatre Funding & Commissioning event</a></li>
