updates tameside swep

--- a/src/pages/tameside/severe-weather-accommodation/index.hbs
+++ b/src/pages/tameside/severe-weather-accommodation/index.hbs
@@ -26,29 +26,23 @@ location: tameside
 <div class="block">
   <div class="container">
     <div class="block__content">
-      
+
       <p>During periods of severe cold weather, additional emergency accommodation is provided by councils. This winter, we are aiming to provide A Bed Every Night for people who are rough sleeping in Greater Manchester. Find out more at <a href="http://streetsupport.net/gm">streetsupport.net/gm</a>.</p>
 
-      <h3 class="h3">Visit Tameside council</h3>
-      <ul>
-        <li>Monday to Thursday: 9am – 3pm</li>
-        <li>Friday: from 10am</li>
-      </ul>
-      <p>Tameside Housing Advice<br />
-      119-125 Old Street,<br />
-      Ashton under Lyne.<br />
-      OL6 7RL</p>
-      <h3 class="h3">By Telephone</h3>
-      <ul>
-        <li>Monday to Thursday: 9am – 5pm</li>
-        <li>Friday: 10am - 4pm</li>
-      </ul>
-      <p>Telephone: <a href="tel:01613312700">0161 331 2700</a></p>
-      <p>Out of Hours telephone: <a href="tel:01613312700">0161 331 2700</a></p>
-      
+      <h2 class="h2">Contact the council</h2>
+      <p class="bold">By telephone:</p>
+      <p>In hours telephone - <a href="tel:0161 342 2700">0161 342 2700</a></p>
+      <p>Monday to Wednesday: 9am – 5pm<br>Thursday: 9am - 4:30pm<br>Friday: 10am - 4pm</p>
+      <p>Out of hours telephone - <a href="tel:0161 342 2700">0161 342 2700</a></p>
+      <p class="bold">By email:</p>
+      <p>The number of calls the service receives is very high and it is often the case that you will receive a quicker response to your enquiry if you email the service. To contact us by email, please use the following e-mail address: <a href="mailto:housing.options@tameside.gov.uk">housing.options@tameside.gov.uk</a></p>
+      <h2 class="h2">Visit Tameside Housing Advice by appointment</h2>
+      <p>To make an appointment please contact Tameside Housing Advice by email or by telephone and visit us at:</p>
+      <p>Tameside Housing Advice,<br>119-125 Old Street,<br>Ashton under Lyne,<br>OL6 7RL.</p>
+
     </div>
 
     {{> social-share}}
-    
+
   </div>
 </div>
