updates bury swep

--- a/src/pages/bury/severe-weather-accommodation/index.hbs
+++ b/src/pages/bury/severe-weather-accommodation/index.hbs
@@ -26,19 +26,19 @@ location: bury
 <div class="block">
   <div class="container">
     <div class="block__content">
-      
+
       <p>During periods of severe cold weather, additional emergency accommodation is provided by councils. This winter, we are aiming to provide A Bed Every Night for people who are rough sleeping in Greater Manchester. Find out more at <a href="http://streetsupport.net/gm">streetsupport.net/gm</a>.</p>
 
       <ul>
-        <li>Visit Housing Reception at Bury Town Hall BL9 0SW (Mon-Fri 10am-1pm)</li>
-        <li>Call the toen hall on 0161 253 5537</li>
-        <li>Refer through a local agencies into the Bury Housing Assessment team (Mon-Fri 10am-5pm)</li>
-        <li>After 5pm and at weekends call the out of hours number 0161 253 6606 (5pm to 8.45am)</li>
+        <li>Contact the Homeless Assessment and Support service on <a href="tel:0161 253 5537">0161 253 5537</a>, Mon-Fri 9am -5pm.</li>
+        <li>Make an online referral at <a href="www.bury.gov.uk/homeless">www.bury.gov.uk/homeless</a> - Please note these are only processed during office hours Mon to Fri 9am - 5pm.</li>
+        <li>Refer through a local support agencies into the Bury Housing Assessment team, Mon-Fri 10am-5pm.</li>
+        <li>After 5pm Monday to Friday and at weekends/Bank holidays, please contact the out of hours service on <a href="tel:0161 253 6606">0161 253 6606</a>.</li>
       </ul>
 
     </div>
 
     {{> social-share}}
-    
+
   </div>
 </div>
