chelmsford warm spaces and swep

--- a/src/pages/chelmsford/money-help-services/index.hbs
+++ b/src/pages/chelmsford/money-help-services/index.hbs
@@ -30,6 +30,12 @@ location: chelmsford
 <div class="block">
   <div class="container">
     <div class="block__content">
+      <h1 class="h1">Warm Spaces</h1>
+      <ul>
+        <li>Free and low-cost local places to keep warm this winter</li>
+        <li>Find out more in this <a target="_blank" href="/chelmsford/money-help-services/warm-spaces.pdf">warm spaces document</a></li>
+      </ul>
+
       <h1 class="h1">Advice Services</h1>
 
       <h2 class="h2">Citizens Advice</h2>
