--- a/src/pages/chelmsford/severe-weather-accommodation/index.hbs
+++ b/src/pages/chelmsford/severe-weather-accommodation/index.hbs
@@ -26,10 +26,13 @@ location: chelmsford
 <div class="block">
   <div class="container">
     <div class="block__content">
-      <p>During the winter months, emergency beds are available for rough sleepers.</p>
-      <p>Insert content here!</p>
+      <p>Guidelines say that when the temperature drops below zero for 3 consecutive days, however common sense prevails</p>
+      <p>During severe weather, emergency beds are available for rough sleepers. Known rough sleepers (rough sleepers who have been referred through Streetlink) will be offered emergency accommodation once Severe Weather Emergency Protocol (SWEP) is activated. If you are worried about a rough sleeper please refer them through <a href="https://www.streetlink.org.uk/">Streetlink</a>.</p>
+      <h2 class="h2">Referral/outreach for SWEP</h2>
+      <p class="bold">The CCC Navigation team (Chelmsford County Council)</p>
+      <p>The Commissioned CHESS outreach team<br>Website: <a href="https://chesshomeless.org/">https://chesshomeless.org/</a><br>Telephone: <a href="tel:01245 281104">01245 281104</a> Email: <a href="mailto:administration@chesshomeless.org">administration@chesshomeless.org</a>.</p>
 
     {{> social-share}}
-    
+
   </div>
 </div>
