adds glasgow swep

--- a/src/pages/glasgow/severe-weather-accommodation/index.hbs
+++ b/src/pages/glasgow/severe-weather-accommodation/index.hbs
@@ -26,10 +26,9 @@ location: glasgow
 <div class="block">
   <div class="container">
     <div class="block__content">
-      <p>During the winter months, emergency beds are available for rough sleepers.</p>
-      <p>Insert content here!</p>
+      <p>The Overnight Welcome Centre operated by Glasgow City Mission at 20 Crimea Street is <span class="bold">open from 1st December 2022- 31st March 2023</span>, for people who need support accessing accommodation throughout the night. The Welcome Centre will work closely with the HSPC out-of-hours service to access emergency accommodation. Anyone in crisis can come, or be referred to 20 Crimea Street, G2 8PW.</p>
 
     {{> social-share}}
-    
+
   </div>
 </div>
