updates edinburgh swep

--- a/src/pages/edinburgh/severe-weather-accommodation/index.hbs
+++ b/src/pages/edinburgh/severe-weather-accommodation/index.hbs
@@ -27,7 +27,26 @@ location: edinburgh
   <div class="container">
     <div class="block__content">
       <p>During periods of cold weather, the Edinburgh Council operates a Winter Contingency when the weather feels like below 0° Celsius. When the Winter Contingency is in operation, the local authority will provide accommodation for people who wouldn’t normally be entitled to access it via the statutory route.</p>
-      <p>If you need to access emergency accommodation you can contact the City of Edinburgh Council on 0131 529 7355 or 0131 529 7829.</p>
+
+      <h2 class="h3">Emergency Accommodation City of Edinburgh Council</h2>
+      <ul>
+        <li>Freephone <a href="tel:0800 032 5968">0800 032 5968</a>.</li>
+        <li>Local rate <a href="tel:0131 200 2000">0131 200 2000</a>.</li>
+      </ul>
+
+      <h2 class="h3">The Bethany Rapid Reaccommodation Welcome Centre; Haymarket Hub Hotel, 7 Clifton Terrace, Edinburgh, EH12 5DR</h2>
+      <ul>
+        <li>Tel: <a href="tel:07919 557 673">07919 557 673</a>.</li>
+      </ul>
+
+      <h2 class="h3">Streetwork at Simon Community Scotland; Edinburgh Support Hub, 22 Holyrood Road, EH8 8AF</h2>
+      <p>Mon, Tue, Thu and Fri: 9am - 8pm<br>Wed: 10am - 8pm<br>Sat and Sun: 9am - 5pm</p>
+      <ul>
+        <li>Tel: <a href="tel:0808 178 2323">0808 178 2323</a>.</li>
+      </ul>
+
+      <h2 class="h3">Streetwork at Simon Community Scotland</h2>
+      <p>24hr Freephone: tel: <a href="tel:08081782323">08081782323</a>.</p>
 
     {{> social-share}}
 
