updates reading swep

--- a/src/pages/reading/severe-weather-accommodation/index.hbs
+++ b/src/pages/reading/severe-weather-accommodation/index.hbs
@@ -35,7 +35,7 @@ location: reading
         <li>widespread ice</li>
         <li>feels like temperatures</li>
       </ul>
-      <p>Placements will last for the duration of the identified period of cold weather according to the predicted temperatures. </p>
+      <p>Placements will last for the duration of the identified period of cold weather according to the predicted temperatures and support will be offered to explore your housing option.</p>
     </div>
   </div>
 </div>
@@ -48,12 +48,12 @@ location: reading
 
       <h2 class="h2">If you have nowhere to go tonight, you can access a severe weather bed by contacting any one of the following:</h2>
       <ul>
-        <li>St. Mungo’s Rough Sleeper Outreach Service - 0118 958 5002 or ReadingRSOS@mungos.org.</li>
-        <li>RBC Housing Advice Service - 0118 937 2165 or housing.advice@reading.gov.uk (please note that there is still limited access to the Civic Offices at this time so please all or email before going to the Civic Offices if you are able to).</li>
-        <li>Out of Hours (from 5:30pm) please call Reading’s Emergency Duty Service on 01344 786 543.</li>
+        <li>St. Mungo’s Rough Sleeper Outreach Service - <a href="tel:0118 958 5002">0118 958 5002</a> or <a href="mailto:ReadingRSOS@mungos.org.">ReadingRSOS@mungos.org</a>.</li>
+        <li>RBC Housing Advice Service - <a href="tel:0118 937 2165">0118 937 2165</a> or <a href="mailto:housing.advice@reading.gov.uk">housing.advice@reading.gov.uk</a> (please note that there is still limited access to the Civic Offices at this time so please all or email before going to the Civic Offices if you are able to).</li>
+        <li>Out of Hours (from 5:00pm) please call Reading’s Emergency Duty Service on <a href="tel:01344 786 543">01344 786 543</a>.</li>
       </ul>
       <h2 class="h2">If you are concerned about some sleeping rough tonight, you can:</h2>
-      <p>Alert the Council and St Mungo's Reading Rough Sleeper Outreach Service via Streetlink by downloading <a href="https://www.streetlink.org.uk/">the Streetlink app</a> or by calling 0300 500 0914.</p>
+      <p>Alert the Council and St Mungo's Reading Rough Sleeper Outreach Service via Streetlink by downloading <a href="https://www.streetlink.org.uk/">the Streetlink app</a> or by calling <a href="tel:0300 500 0914">0300 500 0914</a>.</p>
       <h3 class="h3">For more info on SWEP, you can read our blog <a href="">here</a></h3>
       <p><strong>Please do not just turn up at the Willow House as you will be refused entry. Everyone must be referred and assessed to ensure your and everyone else’s safety.</strong></p>
     </div>
