updates rochdale swep

--- a/src/pages/rochdale/severe-weather-accommodation/index.hbs
+++ b/src/pages/rochdale/severe-weather-accommodation/index.hbs
@@ -26,14 +26,24 @@ location: rochdale
 <div class="block">
   <div class="container">
     <div class="block__content">
-      
+
       <p>During periods of severe cold weather, additional emergency accommodation is provided by councils. This winter, we are aiming to provide A Bed Every Night for people who are rough sleeping in Greater Manchester. Find out more at <a href="http://streetsupport.net/gm">streetsupport.net/gm</a>.</p>
 
-      <p>Contact our accommodation service at Leopold Court <a href="tel:01706923511">01706 923 511</a></p>
-      
+      <p>Rochdale Borough Council takes a flexible and inclusive approach to the offer of assistance during severe weather taking into account the impact of wind chill, rain, snow and heat, and therefore ‘SWEP’ will be activated throughout December - March (reviewed weekly).</p>
+
+      <p>Email: homelessness@rochdale.gov.uk<br>
+Office hours telephone: <a href="tel:0300 303 8548">0300 303 8548</a><br>
+Out of hours telephone: <a href="tel:0300 303 8875">0300 303 8875</a><br>
+Address: Customer service centre<br>
+Number One Riverside<br>
+Smith Street<br>
+Rochdale OL16 1XU</p>
+
+<p>The phone line is open from 9am–4.45pm on Monday, Tuesday and Friday and from 1.30pm–4.45pm on Wednesday and Thursday.</p>
+
     </div>
 
     {{> social-share}}
-    
+
   </div>
 </div>
