--- a/src/pages/brighton-and-hove/severe-weather-accommodation/index.hbs
+++ b/src/pages/brighton-and-hove/severe-weather-accommodation/index.hbs
@@ -27,7 +27,7 @@ location: brighton-and-hove
   <div class="container">
     <div class="block__content">
 
-      <p>The council opens it’s SWEP shelter, which is vital to protecting the lives of the most vulnerable of our homeless neighbours in the city during the year’s most severe weather conditions. The night shelter opens when the temperature is predicted to <span class="italic"> feel like</span> zero degrees, there is an <a target="_blank" href="https://www.metoffice.gov.uk/weather/warnings-and-advice/uk-warnings"> amber weather warning</a> or a heatwave is predicted.</p>
+      <p>The council opens it’s <a href="https://www.brighton-hove.gov.uk/housing/homelessness-and-living-street/severe-weather-shelter-swep">SWEP shelter</a>, which is vital to protecting the lives of the most vulnerable of our homeless neighbours in the city during the year’s most severe weather conditions. The night shelter opens when the temperature is predicted to <span class="italic"> feel like</span> zero degrees, there is an <a target="_blank" href="https://www.metoffice.gov.uk/weather/warnings-and-advice/uk-warnings"> amber weather warning</a> or a heatwave is predicted.</p>
 
       <p>The shelter is also known as SWEP (which stands for Severe Weather Emergency Protocols). When SWEP is triggered, the Street Outreach Service will be out on the streets of the city directing people to shelter.</p>
 
@@ -45,9 +45,6 @@ location: brighton-and-hove
 <div class="block block--highlight">
   <div class="container">
     <div class="block__content">
-      <h2 class="h1 best-practice__header">More Permanent Accommodation</h2>
-      <p><a href="https://www.mungos.org/our-services/outreach-teams/">St Mungo’s Street Outreach Service</a> will contact people by telephone and go out seeking the people who are rough sleeping during the day to find them self-contained warm accommodation. Anyone not accommodated during the day will be referred into self-contained accommodation in the council’s newly-commissioned council-run SWEP venue by the street outreach service. In order to safely manage access in line with infection prevention standards the council are taking referrals from SOS and are not publicising the address.</p>
-
       <h2 class="h2">What can members of the public do to help?</h2>
       <p>If you are concerned about someone who is rough sleeping, contact <a href="https://www.streetlink.org.uk/">StreetLink</a> with the details and the information will be passed on to an outreach worker. This requires you to set up a login.  Otherwise, please telephone 0300 500 0914.  If the person you are concerned about needs medical assistance, please telephone <a href="tel:999">999</a>.</p>
     </div>
