updates leeds swep

--- a/src/pages/leeds/severe-weather-accommodation/index.hbs
+++ b/src/pages/leeds/severe-weather-accommodation/index.hbs
@@ -45,7 +45,7 @@ location: leeds
 
       <h2 class="h2">Out of Hours</h2>
 
-      <p>Out of hours placements are made through the LHO ‘Out of hours’ response on 07891 273939.</p>
+      <p>Out of hours placements are made through the LHO ‘Out of hours’ response on <a href="tel:0113 3788366">0113 3788366</a>.</p>
       <p>The public can also notify the Street Outreach Team in Leeds if they are worried about a rough sleeper – contact can be made with this team on 0113 245 9445 or email via on <a href="mailto:Leeds.SOS@cgl.org.uk">Leeds.SOS@cgl.org.uk</a>. The Street Outreach Team work closely with the local authority to obtain suitable accommodation for rough sleepers and are in operation between 23.00 – 2.00 during the severe weather conditions.</p>
     </div>
   </div>
