--- a/src/pages/blackpool/severe-weather-accommodation/index.hbs
+++ b/src/pages/blackpool/severe-weather-accommodation/index.hbs
@@ -26,10 +26,40 @@ location: blackpool
 <div class="block">
   <div class="container">
     <div class="block__content">
-      <p>During the winter months, emergency beds are available for rough sleepers.</p>
-      <p>Insert content here!</p>
+      <h3>Winter Provision (extended SWEP)</h3>
+      <p>During the winter months, the Housing Options Team will be intensifying their efforts to actively engage with rough sleepers, providing offers of support and accommodation where possible. Housing Options has begun this approach now and will continue to the end of March.</p>
+      <p>Housing Options are currently working on a new dedicated winter provision to keep people safe during the winter months, however, as an immediate response the offer of accommodation will be in either hostels, emergency bed units or B&Bs.</p>
+      <p>So we can ensure offers of accommodation are suitable and to ensure appropriate health support is also available, initial assessments will be completed with rough sleepers by the Housing Options Team before placement.</p>
+
+      <h3>You can contact housing options in the following ways:</h3>
+      <p><span class="bold">Office opening times</span></p>
+      <ul>
+        <li>If you are in a homelessness emergency you can attend the housing options office at Chapel Street:<br>1.00pm to 4.30pm Monday to Friday</li>
+        <li>Please be aware that if you call into the office you may have to wait to see someone.</li>
+        <li>Address: Housing options, Chapel Street, Blackpool FY1 5DA</li>
+      </ul>
+
+      <p><span class="bold">Telephone opening times</span></p>
+      <ol>
+        <li>1.00pm to 5.00pm Monday to Thursday</li>
+        <li>1.00pm to 4.30pm Friday</li>
+      </ol>
+      <p>Alternatively you can email us <a href="mailto:housing.options@blackpool.gov.uk">housing.options@blackpool.gov.uk</a></p>
+      <p>Outside of our opening hours we provide an out of hours service, for emergencies only, on telephone 01253 477600.</p>
+
+      <p><span class="bold">Rough sleepers</span></p>
+      <p>Housing options undertakes regular street outreach to identify and offer support to rough sleepers.</p>
+      <p>If you are sleeping on the streets telephone housing options on 01253 477760 or attend our offices on Chapel Street Monday to Friday 1.00pm to 4.30pm.</p>
+      <p>If you are a member of the public and have identified a rough sleeper, you can telephone us direct on 01253 477765, or email us at <a href="mailto:HSAT@blackpool.gov.uk">HSAT@blackpool.gov.uk</a></p>
+
+      <p><span class="bold">More information on your rights</span></p>
+      <ul>
+        <li><a href="https://england.shelter.org.uk/housing_advice/homelessness">More information about your housing rights and the council’s duties</a>.</li>
+        <li><a href="https://www.facebook.com/blackpoolfoodbank/">For additional support, including access to food and emergency provision</a>.</li>
+      </ul>
+
 
     {{> social-share}}
-    
+
   </div>
 </div>
