--- a/src/partials/leeds/supporters.hbs
+++ b/src/partials/leeds/supporters.hbs
@@ -1,4 +1,6 @@
 <h2 class="h2">Funded and supported by&hellip;</h2>
 <ul class="partners__list">
-  <li class="partners__logo partners__logo--leedsbid"><a href="http://www.leedsbid.co.uk/">{{> icon name="leedsbid"}}</a></li>
+  <li class="partners__logo partners__logo--supportchange"><a href="https://www.youtube.com/watch?v=u6pIRdr3_7Q">{{> icon name="supportchange"}}</a></li>
+  <li class="partners__logo partners__logo--leedscouncil"><a href="https://www.leeds.gov.uk/">{{> icon name="leedscouncil"}}</a></li>
+  <li class="partners__logo partners__logo--leedscharter"><a href="https://streetsupport.net/leeds/charter/">{{> icon name="leedscharter"}}</a></li>
 </ul>
