--- a/src/partials/locations/banners/print-map-banner-leeds.hbs
+++ b/src/partials/locations/banners/print-map-banner-leeds.hbs
@@ -7,7 +7,7 @@
   </div>
   </div>
   <div class="home__copy home__copy--leeds-print-map">
-    <h1>Leeds Food Aid</h1>
+    <h1>Leeds Food Aid Network (FAN)d</h1>
     <p>There's a great new document that lists the locations of food provision services for those who need them in Leeds.</p>
     <a class="btn btn--brand-e" target="_blank" href="https://docs.google.com/document/d/1i2oxqiACc4xse3mwQ9lGbJC4AD-AXcXHTmlmrmZcG5g/edit">
       <span class="btn__text">View the list</span>
