--- a/src/pages/leeds/index.hbs
+++ b/src/pages/leeds/index.hbs
@@ -36,6 +36,18 @@ location: leeds
 
 <div id="js-swep-output"></div>
 
+<div class="cta--money-advice">
+  <div class="container text-center">
+    <p class="sleeping-rough-title__content" style="color: #fff; margin-bottom: 0px;">If you or someone you know needs access to food or somewhere warm over the winter period, information can be found in these documents. You can find information on places to keep warm <a target="_blank" style="color: #ffde00; text-decoration: underline;" href="https://www.leeds.gov.uk/campaign/warm-spaces">here</a>.</p>
+    <a target="_blank" href="/leeds/foodbank-christmas-provision.pdf" class="btn btn--brand-h">
+      <span class="btn__text">Foodbank provision</span>
+    </a>
+    <a target="_blank" href="/leeds/food-and-homelessness-provision.pdf" class="btn btn--brand-h">
+      <span class="btn__text">Christmas provision</span>
+    </a>
+  </div>
+</div>
+
 <div class="block block--light-highlight">
   <div class="container">
     <div class="block__content text-center">
