updates manchester swep

--- a/src/pages/manchester/severe-weather-accommodation/index.hbs
+++ b/src/pages/manchester/severe-weather-accommodation/index.hbs
@@ -35,8 +35,13 @@ location: manchester
       <p>This winter, we are aiming to provide A Bed Every Night for people who are rough sleeping in Greater
         Manchester. Find out more at <a href="http://streetsupport.net/gm">streetsupport.net/gm</a>.</p>
 
-      <p>Councils work in partnership with local organisations and housing providers to make this additional
-        accommodation available, covering the accommodation and staff costs.</p>
+      <p>A triage and referral hub will be facilitated at the following locations and times:</p>
+      <ul>
+        <li>The Booth Centre:  Pimblett St, Cheetham Hill, Manchester, M3 1FU.<br>8am to 4pm on Wednesday 7th December till at least Friday 9th December.</li>
+        <li>Cornerstones Day Centre: 104 Denmark Road, Manchester, M15 6JS.<br>10am to 3pm on Wednesday 7th December till at least Friday 9th December.<br>NB: referrals will be made via telephone to Booth Centre.</li>
+        <li>Coffee for Craig:  The Meanwhile,153 Great Ducie Street, Manchester, M3 1FB.<br>6pm to 1am on Wednesday 7th December till at least Friday 9th December.</li>
+        <p>At all referral venues people will be provided with referral information, welfare items and if, appropriate, allocated accommodation and transport.</p>
+      </ul>
     </div>
   </div>
 </div>
