--- a/src/pages/brighton-and-hove/severe-weather-accommodation/index.hbs
+++ b/src/pages/brighton-and-hove/severe-weather-accommodation/index.hbs
@@ -36,6 +36,7 @@ location: brighton-and-hove
       <p>We are always as flexible as possible, and adapt to the needs of rough sleepers.</p>
 
       <p>Referrals are made through our street outreach partners Change, Grow, Live, by reporting through the <a href="https://www.streetlink.org.uk/">Streetlink website</a> or by calling <a href="tel:0300 500 0914">0300 500 0914</a>.</p>
+      <p>You can contact <a target="_blank" href="https://www.brighton-hove.gov.uk/council-and-democracy/emergency-information/social-care-out-hours-service">Brighton and Hove Out of Hours Social Care</a> on <a href="tel:01273 295555">01273 295555</a>.</p>
 
       <p>The council’s street outreach partners Change Grow Live, are currently working in the city seven days a week to engage with everyone rough sleeping.  Streetlink asks for where people are bedded down but this can also be where they are located during the day. Alternatively services can support people to contact the Housing Options duty line and arrange placement via this route. Additionally during the week in the mornings people can be directed to <a href="https://streetsupport.net/find-help/organisation/?organisation=bht-accommodation-for-work"> First Base (BHT)</a> who work closely with SOS to ensure people are offered accommodation.</p>
     </div>
@@ -46,7 +47,7 @@ location: brighton-and-hove
   <div class="container">
     <div class="block__content">
       <h2 class="h2">What can members of the public do to help?</h2>
-      <p>If you are concerned about someone who is rough sleeping, contact <a href="https://www.streetlink.org.uk/">StreetLink</a> with the details and the information will be passed on to an outreach worker. This requires you to set up a login.  Otherwise, please telephone 0300 500 0914.  If the person you are concerned about needs medical assistance, please telephone <a href="tel:999">999</a>.</p>
+      <p>If you are concerned about someone who is rough sleeping, contact <a href="https://www.streetlink.org.uk/">StreetLink</a> with the details and the information will be passed on to an outreach worker. This requires you to set up a login. Otherwise, please telephone 0300 500 0914. You can contact <a target="_blank" href="https://www.brighton-hove.gov.uk/council-and-democracy/emergency-information/social-care-out-hours-service">Brighton and Hove Out of Hours Social Care</a> on <a href="tel:01273 295555">01273 295555</a>. If the person you are concerned about needs medical assistance, please telephone <a href="tel:999">999</a>.</p>
     </div>
   </div>
 </div>
