updates mailing list

--- a/src/pages/bolton/index.hbs
+++ b/src/pages/bolton/index.hbs
@@ -73,7 +73,7 @@ location: bolton
     <div class="block__content block__content--central-cta block__content--join-mailing-list">
       <h1 class="h2">Join the Street Support mailing list</h1>
       <p>Keep up to date with how we are tackling homelessness, and opportunities to get involved, by signing up to our mailing list.</p>
-      <a href="http://eepurl.com/cEJa1r" class="btn btn--brand-e">
+      <a href="https://streetsupport.us12.list-manage.com/subscribe?u=da9a1d4bb2b1a69a981456972&id=c966413ba3" class="btn btn--brand-e">
         <span class="btn__text">Join our mailing list</span>
       </a>
     </div>
