updates other mailer locations

--- a/src/pages/about/index.hbs
+++ b/src/pages/about/index.hbs
@@ -102,7 +102,7 @@ page: about
       <p>You can find out more about our progress on our
         <a href="https://www.facebook.com/streetsupport/">Facebook page</a>,
         <a href="https://twitter.com/streetsupportuk">on Twitter</a>, or you can
-        <a href="http://streetsupport.us12.list-manage1.com/subscribe?u=da9a1d4bb2b1a69a981456972&id=52ba96f2af">subscribe to our newsletter</a>.</p>
+        <a href="https://streetsupport.us12.list-manage.com/subscribe?u=da9a1d4bb2b1a69a981456972&id=c966413ba3">subscribe to our newsletter</a>.</p>
 
       {{> social-share}}
     </div>
