--- a/src/pages/privacy-policy/index.hbs
+++ b/src/pages/privacy-policy/index.hbs
@@ -50,7 +50,7 @@ page: privacy-policy
 
       <h2 class="h2">Updates</h2>
 
-      <p>You can subscribe to our mailing lists through the site, or unsubscribe any time simply by pressing the unsubscribe
+      <p>You can <a href="https://streetsupport.us12.list-manage.com/subscribe?u=da9a1d4bb2b1a69a981456972&id=c966413ba3">subscribe</a> to our mailing lists through the site, or unsubscribe any time simply by pressing the unsubscribe
         link in any email. If you have any issues or questions, please contact us.</p>
 
       <h2 class="h2">Links to Third Party Sites</h2>
